--- a/myphotos/package.json
+++ b/myphotos/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
     "react-html5-camera-photo": "^1.5.5",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
