--- a/myphotos/package.json
+++ b/myphotos/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "fs": "^0.0.1-security",
+    "leaflet": "^1.7.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
     "react-html5-camera-photo": "^1.5.5",
+    "react-leaflet": "^3.2.5",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
