--- a/myphotos/package.json
+++ b/myphotos/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "fs": "^0.0.1-security",
+    "js-base64": "^3.7.2",
     "leaflet": "^1.7.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
