--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "bootstrap": "^5.1.3",
     "http-server": "^14.1.0",
     "js-base64": "^3.7.2",
     "react": "^17.0.2",
