--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.9",
     "@types/react-html5-camera-photo": "^1.5.1",
     "@types/react-modal": "^3.13.1",
     "leaflet": "^1.7.1"
