--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "http-server": "^14.1.0",
     "js-base64": "^3.7.2",
+    "panolens": "^0.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-gitignore": "^1.0.12",
@@ -23,6 +24,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "three": "^0.138.2",
     "ts-migrate": "^0.1.27",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
