--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "http-server": "^14.1.0",
     "js-base64": "^3.7.2",
+    "nosleep": "^2.0.0",
     "panolens": "^0.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
